<resources>
    <string name="app_name">MVVM STUDY: Linkedin list case</string>
    <string name="avatar_image">Avatar image</string>
    <string name="search_hint">Owner of the directory</string>
    <string name="search_hin2">Name of the directory</string>
    <string name="search_text">android</string>
    <string name="search_text2">architecture-components-samples</string>
    <string name="example_koin">example Koin</string>
    <string name="title_field">Title field</string>
    <string name="id_field">ID field</string>
    <string name="url_field">URL field</string>
    <string name="link_to_profile">Link to Profile</string>
    <string name="withoutKoin">Without koin:\nComment:%1$s\nLike%2$s</string>
    <string name="withKoin">With koin:\nComment:%1$s\nLike%2$s</string>
</resources>