<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/avatar_image" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/title_field"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mediumText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/id_field"
        android:textColor="@android:color/black"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

    <Button
        android:id="@+id/item_url"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/margin_large"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/url_field"
        android:textSize="@dimen/mediumText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_date" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_url" />


</androidx.constraintlayout.widget.ConstraintLayout>